@@ -28,9 +28,7 @@ static KeyCmdHashEntry key_cmd_hash_entries[] = {
 	{"FILE_CLOSE", GEANY_KEY_GROUP_FILE, GEANY_KEYS_FILE_CLOSE},
 	{"FILE_CLOSEALL", GEANY_KEY_GROUP_FILE, GEANY_KEYS_FILE_CLOSEALL},
 	{"FILE_RELOAD", GEANY_KEY_GROUP_FILE, GEANY_KEYS_FILE_RELOAD},
-	{"FILE_COUNT", GEANY_KEY_GROUP_FILE, GEANY_KEYS_FILE_COUNT},
 	{"PROJECT_PROPERTIES", GEANY_KEY_GROUP_PROJECT, GEANY_KEYS_PROJECT_PROPERTIES},
-	{"PROJECT_COUNT", GEANY_KEY_GROUP_PROJECT, GEANY_KEYS_PROJECT_COUNT},
 	{"EDITOR_UNDO", GEANY_KEY_GROUP_EDITOR, GEANY_KEYS_EDITOR_UNDO},
 	{"EDITOR_REDO", GEANY_KEY_GROUP_EDITOR, GEANY_KEYS_EDITOR_REDO},
 	{"EDITOR_DELETELINE", GEANY_KEY_GROUP_EDITOR, GEANY_KEYS_EDITOR_DELETELINE},
@@ -45,18 +43,15 @@ static KeyCmdHashEntry key_cmd_hash_entries[] = {
 	{"EDITOR_AUTOCOMPLETE", GEANY_KEY_GROUP_EDITOR, GEANY_KEYS_EDITOR_AUTOCOMPLETE},
 	{"EDITOR_CALLTIP", GEANY_KEY_GROUP_EDITOR, GEANY_KEYS_EDITOR_CALLTIP},
 	{"EDITOR_MACROLIST", GEANY_KEY_GROUP_EDITOR, GEANY_KEYS_EDITOR_MACROLIST},
-	{"EDITOR_COUNT", GEANY_KEY_GROUP_EDITOR, GEANY_KEYS_EDITOR_COUNT},
 	{"CLIPBOARD_CUT", GEANY_KEY_GROUP_CLIPBOARD, GEANY_KEYS_CLIPBOARD_CUT},
 	{"CLIPBOARD_COPY", GEANY_KEY_GROUP_CLIPBOARD, GEANY_KEYS_CLIPBOARD_COPY},
 	{"CLIPBOARD_PASTE", GEANY_KEY_GROUP_CLIPBOARD, GEANY_KEYS_CLIPBOARD_PASTE},
 	{"CLIPBOARD_CUTLINE", GEANY_KEY_GROUP_CLIPBOARD, GEANY_KEYS_CLIPBOARD_CUTLINE},
 	{"CLIPBOARD_COPYLINE", GEANY_KEY_GROUP_CLIPBOARD, GEANY_KEYS_CLIPBOARD_COPYLINE},
-	{"CLIPBOARD_COUNT", GEANY_KEY_GROUP_CLIPBOARD, GEANY_KEYS_CLIPBOARD_COUNT},
 	{"SELECT_ALL", GEANY_KEY_GROUP_SELECT, GEANY_KEYS_SELECT_ALL},
 	{"SELECT_WORD", GEANY_KEY_GROUP_SELECT, GEANY_KEYS_SELECT_WORD},
 	{"SELECT_LINE", GEANY_KEY_GROUP_SELECT, GEANY_KEYS_SELECT_LINE},
 	{"SELECT_PARAGRAPH", GEANY_KEY_GROUP_SELECT, GEANY_KEYS_SELECT_PARAGRAPH},
-	{"SELECT_COUNT", GEANY_KEY_GROUP_SELECT, GEANY_KEYS_SELECT_COUNT},
 	{"FORMAT_TOGGLECASE", GEANY_KEY_GROUP_FORMAT, GEANY_KEYS_FORMAT_TOGGLECASE},
 	{"FORMAT_COMMENTLINETOGGLE", GEANY_KEY_GROUP_FORMAT, GEANY_KEYS_FORMAT_COMMENTLINETOGGLE},
 	{"FORMAT_COMMENTLINE", GEANY_KEY_GROUP_FORMAT, GEANY_KEYS_FORMAT_COMMENTLINE},
@@ -69,12 +64,9 @@ static KeyCmdHashEntry key_cmd_hash_entries[] = {
 	{"FORMAT_SENDTOCMD1", GEANY_KEY_GROUP_FORMAT, GEANY_KEYS_FORMAT_SENDTOCMD1},
 	{"FORMAT_SENDTOCMD2", GEANY_KEY_GROUP_FORMAT, GEANY_KEYS_FORMAT_SENDTOCMD2},
 	{"FORMAT_SENDTOCMD3", GEANY_KEY_GROUP_FORMAT, GEANY_KEYS_FORMAT_SENDTOCMD3},
-	{"FORMAT_COUNT", GEANY_KEY_GROUP_FORMAT, GEANY_KEYS_FORMAT_COUNT},
 	{"INSERT_DATE", GEANY_KEY_GROUP_INSERT, GEANY_KEYS_INSERT_DATE},
 	{"INSERT_ALTWHITESPACE", GEANY_KEY_GROUP_INSERT, GEANY_KEYS_INSERT_ALTWHITESPACE},
-	{"INSERT_COUNT", GEANY_KEY_GROUP_INSERT, GEANY_KEYS_INSERT_COUNT},
 	{"SETTINGS_PREFERENCES", GEANY_KEY_GROUP_SETTINGS, GEANY_KEYS_SETTINGS_PREFERENCES},
-	{"SETTINGS_COUNT", GEANY_KEY_GROUP_SETTINGS, GEANY_KEYS_SETTINGS_COUNT},
 	{"SEARCH_FIND", GEANY_KEY_GROUP_SEARCH, GEANY_KEYS_SEARCH_FIND},
 	{"SEARCH_FINDNEXT", GEANY_KEY_GROUP_SEARCH, GEANY_KEYS_SEARCH_FINDNEXT},
 	{"SEARCH_FINDPREVIOUS", GEANY_KEY_GROUP_SEARCH, GEANY_KEYS_SEARCH_FINDPREVIOUS},
@@ -84,7 +76,6 @@ static KeyCmdHashEntry key_cmd_hash_entries[] = {
 	{"SEARCH_FINDPREVSEL", GEANY_KEY_GROUP_SEARCH, GEANY_KEYS_SEARCH_FINDPREVSEL},
 	{"SEARCH_NEXTMESSAGE", GEANY_KEY_GROUP_SEARCH, GEANY_KEYS_SEARCH_NEXTMESSAGE},
 	{"SEARCH_FINDUSAGE", GEANY_KEY_GROUP_SEARCH, GEANY_KEYS_SEARCH_FINDUSAGE},
-	{"SEARCH_COUNT", GEANY_KEY_GROUP_SEARCH, GEANY_KEYS_SEARCH_COUNT},
 	{"GOTO_FORWARD", GEANY_KEY_GROUP_GOTO, GEANY_KEYS_GOTO_FORWARD},
 	{"GOTO_BACK", GEANY_KEY_GROUP_GOTO, GEANY_KEYS_GOTO_BACK},
 	{"GOTO_LINE", GEANY_KEY_GROUP_GOTO, GEANY_KEYS_GOTO_LINE},
@@ -94,19 +85,16 @@ static KeyCmdHashEntry key_cmd_hash_entries[] = {
 	{"GOTO_PREVIOUSMARKER", GEANY_KEY_GROUP_GOTO, GEANY_KEYS_GOTO_PREVIOUSMARKER},
 	{"GOTO_TAGDEFINITION", GEANY_KEY_GROUP_GOTO, GEANY_KEYS_GOTO_TAGDEFINITION},
 	{"GOTO_TAGDECLARATION", GEANY_KEY_GROUP_GOTO, GEANY_KEYS_GOTO_TAGDECLARATION},
-	{"GOTO_COUNT", GEANY_KEY_GROUP_GOTO, GEANY_KEYS_GOTO_COUNT},
 	{"VIEW_TOGGLEALL", GEANY_KEY_GROUP_VIEW, GEANY_KEYS_VIEW_TOGGLEALL},
 	{"VIEW_FULLSCREEN", GEANY_KEY_GROUP_VIEW, GEANY_KEYS_VIEW_FULLSCREEN},
 	{"VIEW_MESSAGEWINDOW", GEANY_KEY_GROUP_VIEW, GEANY_KEYS_VIEW_MESSAGEWINDOW},
 	{"VIEW_SIDEBAR", GEANY_KEY_GROUP_VIEW, GEANY_KEYS_VIEW_SIDEBAR},
 	{"VIEW_ZOOMIN", GEANY_KEY_GROUP_VIEW, GEANY_KEYS_VIEW_ZOOMIN},
 	{"VIEW_ZOOMOUT", GEANY_KEY_GROUP_VIEW, GEANY_KEYS_VIEW_ZOOMOUT},
-	{"VIEW_COUNT", GEANY_KEY_GROUP_VIEW, GEANY_KEYS_VIEW_COUNT},
 	{"FOCUS_EDITOR", GEANY_KEY_GROUP_FOCUS, GEANY_KEYS_FOCUS_EDITOR},
 	{"FOCUS_SCRIBBLE", GEANY_KEY_GROUP_FOCUS, GEANY_KEYS_FOCUS_SCRIBBLE},
 	{"FOCUS_VTE", GEANY_KEY_GROUP_FOCUS, GEANY_KEYS_FOCUS_VTE},
 	{"FOCUS_SEARCHBAR", GEANY_KEY_GROUP_FOCUS, GEANY_KEYS_FOCUS_SEARCHBAR},
-	{"FOCUS_COUNT", GEANY_KEY_GROUP_FOCUS, GEANY_KEYS_FOCUS_COUNT},
 	{"NOTEBOOK_SWITCHTABLEFT", GEANY_KEY_GROUP_NOTEBOOK, GEANY_KEYS_NOTEBOOK_SWITCHTABLEFT},
 	{"NOTEBOOK_SWITCHTABRIGHT", GEANY_KEY_GROUP_NOTEBOOK, GEANY_KEYS_NOTEBOOK_SWITCHTABRIGHT},
 	{"NOTEBOOK_SWITCHTABLASTUSED", GEANY_KEY_GROUP_NOTEBOOK, GEANY_KEYS_NOTEBOOK_SWITCHTABLASTUSED},
@@ -114,12 +102,10 @@ static KeyCmdHashEntry key_cmd_hash_entries[] = {
 	{"NOTEBOOK_MOVETABRIGHT", GEANY_KEY_GROUP_NOTEBOOK, GEANY_KEYS_NOTEBOOK_MOVETABRIGHT},
 	{"NOTEBOOK_MOVETABFIRST", GEANY_KEY_GROUP_NOTEBOOK, GEANY_KEYS_NOTEBOOK_MOVETABFIRST},
 	{"NOTEBOOK_MOVETABLAST", GEANY_KEY_GROUP_NOTEBOOK, GEANY_KEYS_NOTEBOOK_MOVETABLAST},
-	{"NOTEBOOK_COUNT", GEANY_KEY_GROUP_NOTEBOOK, GEANY_KEYS_NOTEBOOK_COUNT},
 	{"DOCUMENT_REPLACETABS", GEANY_KEY_GROUP_DOCUMENT, GEANY_KEYS_DOCUMENT_REPLACETABS},
 	{"DOCUMENT_FOLDALL", GEANY_KEY_GROUP_DOCUMENT, GEANY_KEYS_DOCUMENT_FOLDALL},
 	{"DOCUMENT_UNFOLDALL", GEANY_KEY_GROUP_DOCUMENT, GEANY_KEYS_DOCUMENT_UNFOLDALL},
 	{"DOCUMENT_RELOADTAGLIST", GEANY_KEY_GROUP_DOCUMENT, GEANY_KEYS_DOCUMENT_RELOADTAGLIST},
-	{"DOCUMENT_COUNT", GEANY_KEY_GROUP_DOCUMENT, GEANY_KEYS_DOCUMENT_COUNT},
 	{"BUILD_COMPILE", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_COMPILE},
 	{"BUILD_LINK", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_LINK},
 	{"BUILD_MAKE", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_MAKE},
@@ -128,10 +114,7 @@ static KeyCmdHashEntry key_cmd_hash_entries[] = {
 	{"BUILD_NEXTERROR", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_NEXTERROR},
 	{"BUILD_RUN", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_RUN},
 	{"BUILD_OPTIONS", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_OPTIONS},
-	{"BUILD_COUNT", GEANY_KEY_GROUP_BUILD, GEANY_KEYS_BUILD_COUNT},
 	{"TOOLS_OPENCOLORCHOOSER", GEANY_KEY_GROUP_TOOLS, GEANY_KEYS_TOOLS_OPENCOLORCHOOSER},
-	{"TOOLS_COUNT", GEANY_KEY_GROUP_TOOLS, GEANY_KEYS_TOOLS_COUNT},
 	{"HELP_HELP", GEANY_KEY_GROUP_HELP, GEANY_KEYS_HELP_HELP},
-	{"HELP_COUNT", GEANY_KEY_GROUP_HELP, GEANY_KEYS_HELP_COUNT},
 	{NULL, 0, 0}
 };
